refactor: change the endpoint api for product