@@ -8,7 +8,6 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -20,7 +19,7 @@ public class CategoryService {
         List<Category> categories = categoryRepository.findAll();
         return categories.stream()
                 .map(CategoryMapper.INSTANCE::toCategoryResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public CategoryResponse getCategoryById(Long id) {
